[project]
name = "doa_py"
version = "0.2.1"
description = "DOA estimation algorithms implemented in Python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Qian Xu", email = "xuq3196@outlook.com"},
]
maintainers = [
    {name = "Qian Xu", email = "xuq3196@outlook.com"},
]
keywords = ["doa", "direction of arrival", "doa estimation", "array signal processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
urls = {Homepage = "https://github.com/zhiim/doa_py"}
dependencies = [
    "cvxpy>=1.5.3",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "scikit-image>=0.24.0",
    "scipy>=1.14.1",
]
